# data_science_ml_using_python

./: main.py  pyproject.toml
01-Python-Crash-Course/: 01-Python Crash Course.ipynb  02-Python Crash Course Exercises.ipynb
02-Python-for-Data-Analysis-NumPy/: 01-NumPy Arrays.ipynb  02-Numpy Indexing and Selection.ipynb  04-Numpy Exercises.ipynb  05-Numpy Exercises - Solutions.ipynb
03-Python-for-Data-Analysis-Pandas/: 03-DataFrames.ipynb  05-Groupby.ipynb  06-Merging, Joining, and Concatenating.ipynb  07-Operations.ipynb  08-Data Input and Output.ipynb  Excel_Sample.xlsx
04-Pandas-Exercises/: 01-SF Salaries Exercise.ipynb  02-SF Salaries Exercise - Solutions.ipynb  03-Ecommerce Purchases Exercise .ipynb
05-Data-Visualization-with-Matplotlib/: 02-Matplotlib Exercises.ipynb
06-Data-Visualization-with-Seaborn/: 01-Distribution Plots.ipynb  02-Categorical Plots.ipynb  03-Matrix Plots.ipynb  04-Grids.ipynb  05-Regression Plots.ipynb  06-Style and Color.ipynb  07-Seaborn Exercises.ipynb
07-Pandas-Built-in-Data-Viz/: 01-Pandas Built-in Data Visualization.ipynb  02-Pandas Data Visualization Exercise.ipynb
09-Geographical-Plotting/: 03-Choropleth Maps Exercise - Solutions.ipynb
10-Data-Capstone-Projects/: 01-911 Calls Data Capstone Project.ipynb  03-Finance Project.ipynb  04-Finance Project - Solutions.ipynb
